tests/typechecking/valid/midsub4.ml
let x = let y = 1 in y + 5 in print_int (x + 12)