tests/typechecking/invalid/midsub2.ml
let x = (42 + 7.5) in print_int x
